# script_for_processing_csv_files

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: employees1.csv
src/: dto.py  main.py  reports.py
tests/: conftest.py  test_generate_report.py  test_prepare_average_performance.py  test_read.py
