[project]
name = "script-for-processing-csv-files"
version = "0.1.0"
description = ""
authors = [
    {name = "bodrstvuyushiy",email = "grapegregory@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "black (>=25.11.0,<26.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pytest (>=9.0.1,<10.0.0)"
]
